--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
@@ -141,7 +146,7 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>3.0.0</version>
 				<configuration>
-					<mainClass>com.example.MercadosoBack.DriveQuickstart</mainClass>
+					<mainClass>com.example.MercadosoBack.services.DriveQuickstart</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
